🐛 Fix hide scrollbar in member list wrap

--- a/src/styles/modules/search.module.css
+++ b/src/styles/modules/search.module.css
@@ -8,6 +8,10 @@
   overflow-y: auto;
 }
 
+.memberListWrap::-webkit-scrollbar {
+  display: none;
+}
+
 .header {
   display: flex;
   justify-content: flex-end;
